--- a/SistemaBancarioWeb/view/login.html
+++ b/SistemaBancarioWeb/view/login.html
@@ -75,7 +75,7 @@
                     console.log("Saldo:", saldo);
 
                     // Obtém o cheque especial do correntista
-                    const chequeEspecial = dados.cheque_especial;
+                    const chequeEspecial = dados.cheque_Especial;
                     console.log("Cheque especial:", chequeEspecial);
                     
                     // Verifica se o nome de usuário corresponde ao nome de usuário do registro
