--- a/SistemaBancarioWeb/view/register.html
+++ b/SistemaBancarioWeb/view/register.html
@@ -97,7 +97,7 @@
                         tipo: tipo,
                         ativo: 1,
                         saldo: saldoInicial,
-                        cheque_especial: 900,
+                        cheque_Especial: 900,
                         conta: proximoNumeroConta
                     });
 
