--- a/SistemaBancarioWeb/view/transferencia.html
+++ b/SistemaBancarioWeb/view/transferencia.html
@@ -65,28 +65,37 @@
         // Referência ao banco de dados
         const database = firebase.database();
 
-        // Extrair os parâmetros da URL
-        const urlParams = new URLSearchParams(window.location.search);
-        const accountNumber = urlParams.get('accountNumber');
-        const username = urlParams.get('username');
-        let saldo = parseFloat(urlParams.get('saldo'));
+        // Recupera os dados do correntista do localStorage
+        var correntista = {
+            accountNumber: localStorage.getItem('accountNumber'),
+            username: localStorage.getItem('username'),
+            saldo: parseFloat(localStorage.getItem('saldo')),
+            chequeEspecial: parseFloat(localStorage.getItem('chequeEspecial'))
+        };
 
-        console.log("accountNumber:", accountNumber);
-        console.log("username:", username);
-        console.log("saldo:", saldo);
+        console.log("Dados do correntista:", correntista);
 
-        // Função para redirecionar para o Dashboard com os parâmetros da URL
+        // Função para redirecionar para o Dashboard com os parâmetros do localStorage
         function redirectToDashboard() {
             const newParams = new URLSearchParams();
-            newParams.set('accountNumber', accountNumber);
-            newParams.set('username', username);
-            newParams.set('saldo', saldo);
+            newParams.set('accountNumber', correntista.accountNumber);
+            newParams.set('username', correntista.username);
+            newParams.set('saldo', correntista.saldo);
 
             window.location.href = `dashboard.html?${newParams}`;
         }
 
-        // Função para realizar a transferência
+        // Variável para verificar se a transferência está em andamento
+        let transferenciaEmAndamento = false;
+
+        // Função transferir
         function realizarTransferencia() {
+            if (transferenciaEmAndamento) {
+                return; // Se a transferência já estiver em andamento, não faça nada
+            }
+
+            transferenciaEmAndamento = true; // Marca a transferência como em andamento
+
             console.log("Botão Transferir clicado!");
 
             var amount = parseFloat(document.getElementById('amount').value);
@@ -97,21 +106,38 @@
 
             if (isNaN(amount) || amount <= 0) {
                 showMessage('error', 'Digite um valor válido para a transferência.');
+                transferenciaEmAndamento = false; // Marca a transferência como concluída
                 return;
             }
 
             if (!destination.trim()) {
                 showMessage('error', 'Digite a conta de destino.');
+                transferenciaEmAndamento = false; // Marca a transferência como concluída
                 return;
             }
 
-            // Definir a referência da conta de destino corretamente
+            // Recupera os dados do correntista do localStorage
+            var correntista = {
+                accountNumber: localStorage.getItem('accountNumber'),
+                username: localStorage.getItem('username'),
+                saldo: parseFloat(localStorage.getItem('saldo')),
+                chequeEspecial: parseFloat(localStorage.getItem('chequeEspecial'))
+            };
+
+            console.log("Dados do correntista:", correntista);
+
+            if (!correntista.accountNumber) {
+                showMessage('error', 'Correntista não encontrado.');
+                transferenciaEmAndamento = false; // Marca a transferência como concluída
+                return;
+            }
+
+            // Obtém a referência do correntista de destino no banco de dados Firebase
             const correntistaDestinoRef = database.ref('correntistas/' + destination);
-            const correntistaRef = database.ref('correntistas/' + accountNumber);
 
             console.log("correntistaDestinoRef:", correntistaDestinoRef);
 
-            // Realizar a transferência no Firebase
+            // Realiza a transferência no Firebase
             correntistaDestinoRef.once('value', function (snapshot) {
                 console.log("Snapshot:", snapshot);
 
@@ -126,33 +152,29 @@
 
                     console.log("Saldo destino após transferência:", saldoDestino);
 
-                    // Atualizar o saldo da conta de destino
-                    correntistaDestinoRef.update({
-                        saldo: saldoDestino
-                    });
+                    // Atualiza o saldo da conta de destino e da conta de origem no Firebase
+                    const updates = {};
+                    updates['correntistas/' + destination + '/saldo'] = saldoDestino;
+                    updates['correntistas/' + correntista.accountNumber + '/saldo'] = correntista.saldo - amount;
 
-                    // Subtrair o valor transferido do saldo da conta de origem
-                    saldo -= amount;
-
-                    console.log("Saldo conta de origem após transferência:", saldo);
-
-                    // Atualizar o saldo da conta de origem
-                    correntistaRef.update({
-                        saldo: saldo
-                    });
-
-                    // Exibindo mensagem de sucesso
-                    showMessage('success', 'Transferência realizada com sucesso!');
-
-                    // Modificar o parâmetro da URL
-                    const newParams = new URLSearchParams(window.location.search);
-                    newParams.set('saldo', saldo);
-                    window.history.pushState({}, '', `${window.location.pathname}?${newParams}`);
+                    database.ref().update(updates)
+                        .then(function () {
+                            // Exibe mensagem de sucesso
+                            showMessage('success', 'Transferência realizada com sucesso!');
+                        })
+                        .catch(function (error) {
+                            showMessage('error', 'Erro ao realizar a transferência.');
+                        });
                 } else {
                     showMessage('error', 'Conta de destino não encontrada.');
                 }
+
+                transferenciaEmAndamento = false; // Marca a transferência como concluída
             });
         }
+
+
+
 
 
         function showMessage(type, message) {
