--- a/SistemaBancarioWeb/view/transferencia.html
+++ b/SistemaBancarioWeb/view/transferencia.html
@@ -48,6 +48,7 @@
 
     <script>
         // Configuração do Firebase
+        console.log("Configurando o Firebase...");
         const firebaseConfig = {
             apiKey: "AIzaSyAtIGxA5l2gtDiA1XkGieUmFfWKQycEe3Q",
             authDomain: "wykbank-5b21d.firebaseapp.com",
@@ -70,24 +71,59 @@
 
         // Função para redirecionar para o Dashboard
         function redirectToDashboard() {
-            // Implemente conforme necessário
+            const accountNumber = localStorage.getItem('accountNumber');
+            const saldo = localStorage.getItem('saldo');
+            const chequeEspecial = localStorage.getItem('chequeEspecial');
+
+            // Redireciona para o dashboard incluindo os parâmetros na URL
+            window.location.href = `dashboard.html?accountNumber=${accountNumber}&saldo=${saldo}&chequeEspecial=${chequeEspecial}`;
         }
 
+        // Adiciona evento de clique ao link "Dashboard"
+        document.getElementById('dashboardLink').addEventListener('click', redirectToDashboard);
+
+        // Função para exibir mensagens na tela
+        function showMessage(type, message) {
+            const messageDiv = document.getElementById('message');
+            messageDiv.textContent = message;
+
+            if (type === 'success') {
+                messageDiv.className = 'success-message';
+            } else {
+                messageDiv.className = 'error-message';
+            }
+
+            messageDiv.classList.remove('hidden');
+
+            // Limpa a mensagem após 3 segundos
+            setTimeout(() => {
+                messageDiv.textContent = '';
+                messageDiv.classList.add('hidden');
+            }, 3000);
+        }
+
+        //=============================================================================
+
+
+        // Função para realizar a transferência
         function realizarTransferencia() {
             if (transferenciaEmAndamento) {
+                console.log("Transferência em andamento. Aguardando...");
                 return; // Se a transferência já estiver em andamento, não faça nada
             }
 
             transferenciaEmAndamento = true; // Marca a transferência como em andamento
 
             console.log("Botão Transferir clicado!");
+            console.log("████████████████████████");
 
-            var amount = parseFloat(document.getElementById('amount').value);
-            var destination = document.getElementById('destination').value;
+            const amount = parseFloat(document.getElementById('amount').value);
+            const destination = document.getElementById('destination').value.trim();
 
             console.log("Valor da transferência:", amount);
             console.log("Conta de destino:", destination);
 
+            // Verifica se o valor da transferência é um número válido
             if (isNaN(amount) || amount <= 0) {
                 console.log("Valor inválido de transferência:", amount);
                 showMessage('error', 'Digite um valor válido para a transferência.');
@@ -95,7 +131,7 @@
                 return;
             }
 
-            if (!destination.trim()) {
+            if (!destination) {
                 console.log("Conta de destino em branco.");
                 showMessage('error', 'Digite a conta de destino.');
                 transferenciaEmAndamento = false; // Marca a transferência como concluída
@@ -103,12 +139,15 @@
             }
 
             // Recupera os dados do correntista do localStorage
-            var correntista = {
+            const correntista = {
                 accountNumber: localStorage.getItem('accountNumber'),
                 username: localStorage.getItem('username'),
                 saldo: parseFloat(localStorage.getItem('saldo')),
-                chequeEspecial: parseFloat(localStorage.getItem('chequeEspecial'))
+                chequeEspecial: parseFloat(localStorage.getItem('chequeEspecial')),
+                chequeEspecial2: parseFloat(localStorage.getItem('chequeEspecial2'))
             };
+
+            var saldo = correntista.saldo; // Salva o valor do saldo em uma variável local
 
             console.log("Dados do correntista (origem):", correntista);
 
@@ -126,99 +165,147 @@
                 return;
             }
 
-            // Verifica se há saldo suficiente (considerando o cheque especial)
-            var saldoDisponivel = correntista.saldo + Math.max(correntista.chequeEspecial, 0);
+            // Verifica se o saldo é suficiente para o saque
+            console.log("Valor do saque:", amount);
+            console.log("Saldo do correntista:", saldo);
+            console.log("Limite do cheque especial:", correntista.chequeEspecial);
 
-            console.log("Saldo disponível (origem):", saldoDisponivel);
+            // Calcula o saldo disponível, considerando o cheque especial utilizado anteriormente
+            var saldoDisponivel = saldo + Math.max(correntista.chequeEspecial2, 0);
+            console.log("Saldo disponível:", saldoDisponivel);
 
-            if (saldoDisponivel < amount) {
-                console.log("Saldo insuficiente para realizar a transferência.");
-                showMessage('error', 'Saldo e limite do cheque especial insuficientes para realizar a transferência.');
-                transferenciaEmAndamento = false; // Marca a transferência como concluída
-                return;
-            }
+            if (saldoDisponivel >= amount) {
+                console.log("Saldo ou limite do cheque especial é suficiente para a transferência.");
 
-            console.log("Transferindo:", amount, "para:", destination);
+                // Se o saldo for suficiente para cobrir a transferência
+                if (correntista.saldo >= amount) {
+                    console.log("Saldo é suficiente para a transferência sem usar o cheque especial.");
+                    console.log("Atualizando o saldo do correntista:", correntista.saldo - amount);
 
-            // Obtém a referência do correntista de destino no banco de dados Firebase
-            const correntistaDestinoRef = database.ref('correntistas/' + destination);
+                    // Atualiza o saldo no localStorage
+                    correntista.saldo -= amount;
+                    localStorage.setItem('saldo', correntista.saldo);
 
-            console.log("correntistaDestinoRef:", correntistaDestinoRef);
+                    // Atualiza o saldo no localStorage do destinatário e do remetente simultaneamente
+                    const destinatarioRef = database.ref('correntistas/' + destination);
+                    destinatarioRef.once('value', function (snapshot) {
+                        if (snapshot.exists()) {
+                            const dadosDestinatario = snapshot.val();
+                            const novoSaldoDestinatario = parseFloat(dadosDestinatario.saldo) + amount;
+                            const novoSaldoRemetente = correntista.saldo - amount;
 
-            // Realiza a transferência no Firebase
-            correntistaDestinoRef.once('value', function (snapshot) {
-                console.log("Snapshot (destino):", snapshot);
+                            const updates = {};
+                            updates['/correntistas/' + destination + '/saldo'] = novoSaldoDestinatario;
+                            updates['/correntistas/' + correntista.accountNumber + '/saldo'] = novoSaldoRemetente;
 
-                if (snapshot.exists()) {
-                    const dadosDestino = snapshot.val();
-                    console.log("Dados do destino:", dadosDestino);
-
-                    let saldoDestino = parseFloat(dadosDestino.saldo);
-                    console.log("Saldo destino antes da transferência:", saldoDestino);
-
-                    if (saldoDisponivel < amount) {
-                        console.log("Saldo insuficiente para realizar a transferência.");
-                        showMessage('error', 'Saldo insuficiente para realizar a transferência.');
-                        transferenciaEmAndamento = false; // Marca a transferência como concluída
-                        return;
-                    }
-
-                    console.log("Dados do correntista de destino:", dadosDestino);
-
-                    // Atualiza o saldo da conta de destino no Firebase
-                    const novoSaldoDestino = saldoDestino + amount;
-                    console.log("Novo saldo da conta de destino:", novoSaldoDestino);
-                    database.ref('correntistas/' + destination).update({ saldo: novoSaldoDestino })
-                        .then(function () {
-                            // Exibe mensagem de sucesso
-                            showMessage('success', 'Transferência realizada com sucesso!');
-
-                            // Atualiza o saldo da conta de origem no Firebase
-                            const novoSaldoOrigem = correntista.saldo - amount;
-                            database.ref('correntistas/' + correntista.accountNumber).update({ saldo: novoSaldoOrigem })
+                            database.ref().update(updates)
                                 .then(function () {
-                                    // Atualiza o saldo da conta de origem no localStorage
-                                    localStorage.setItem('saldo', novoSaldoOrigem);
-                                    
-                                    // Atualiza o saldo do cheque especial no localStorage
-                                    const novoChequeEspecial = correntista.chequeEspecial;
-                                    localStorage.setItem('chequeEspecial', novoChequeEspecial);
-
-                                    // Atualiza o saldo da conta de destino no localStorage
-                                    const novoSaldoDestinoLocal = saldoDestino + amount;
-                                    localStorage.setItem('saldo_destino', novoSaldoDestinoLocal);
-
-                                    transferenciaEmAndamento = false; // Marca a transferência como concluída
+                                    console.log("Saldo do destinatário atualizado:", novoSaldoDestinatario);
+                                    console.log("Saldo do remetente atualizado:", novoSaldoRemetente);
+                                    // Aqui você pode adicionar o código para atualizar o saldo do destinatário e do remetente no localStorage, se necessário
                                 })
                                 .catch(function (error) {
-                                    console.log("Erro ao atualizar saldo da conta de origem:", error.message);
-                                    showMessage('error', 'Erro ao atualizar saldo da conta de origem.');
-                                    transferenciaEmAndamento = false; // Marca a transferência como concluída
+                                    console.log("Erro ao atualizar saldos:", error.message);
+                                    // Aqui você pode tratar o erro, se necessário
                                 });
+                        } else {
+                            console.log("Conta de destinatário não encontrada.");
+                            // Aqui você pode adicionar o código para tratar o caso em que a conta do destinatário não é encontrada
+                        }
+                    });
+
+                    alert("Transferência de R$ " + amount.toFixed(2) + " realizada com sucesso!");
+                } else {
+                    console.log("Saldo é insuficiente, utilizando cheque especial.");
+
+                    // Calcula o novo saldo e o novo limite do cheque especial
+                    var valorTransferenciaChequeEspecial = amount - correntista.saldo;
+                    console.log("Valor da transferência do cheque especial:", valorTransferenciaChequeEspecial);
+
+                    var novoLimiteChequeEspecial = correntista.chequeEspecial2 - valorTransferenciaChequeEspecial;
+                    console.log("Novo limite do cheque especial:", novoLimiteChequeEspecial);
+
+                    // Atualiza o limite do cheque especial no Firebase
+                    const updates = {};
+                    updates['/correntistas/' + correntista.accountNumber + '/cheque_Especial'] = novoLimiteChequeEspecial;
+
+                    database.ref().update(updates)
+                        .then(function () {
+                            console.log("Limite do cheque especial atualizado no Firebase:", novoLimiteChequeEspecial);
+
+                            // Atualiza o chequeEspecial no LocalStorage
+                            localStorage.setItem('chequeEspecial', novoLimiteChequeEspecial);
+                            // Atualiza o saldo do destinatário no Firebase
+                            const destinatarioRef = database.ref('correntistas/' + destination);
+                            destinatarioRef.once('value', function (snapshot) {
+                                if (snapshot.exists()) {
+                                    const dadosDestinatario = snapshot.val();
+                                    const novoSaldoDestinatario = parseFloat(dadosDestinatario.saldo) + amount;
+
+                                    const updatesDestinatario = {};
+                                    updatesDestinatario['/correntistas/' + destination + '/saldo'] = novoSaldoDestinatario;
+
+                                    database.ref().update(updatesDestinatario)
+                                        .then(function () {
+                                            console.log("Saldo do destinatário atualizado no Firebase:", novoSaldoDestinatario);
+
+                                            // Aqui você pode adicionar o código para atualizar o saldo no LocalStorage, se necessário
+                                        })
+                                        .catch(function (error) {
+                                            console.log("Erro ao atualizar o saldo do destinatário no Firebase:", error.message);
+                                            // Aqui você pode tratar o erro, se necessário
+                                        });
+                                } else {
+                                    console.log("Conta de destinatário não encontrada.");
+                                    // Aqui você pode adicionar o código para tratar o caso em que a conta do destinatário não é encontrada
+                                }
+                            });
                         })
                         .catch(function (error) {
-                            console.log("Erro ao atualizar saldo da conta de destino:", error.message);
-                            showMessage('error', 'Erro ao atualizar saldo da conta de destino.');
-                            transferenciaEmAndamento = false; // Marca a transferência como concluída
+                            console.log("Erro ao atualizar o limite do cheque especial no Firebase:", error.message);
+                            // Aqui você pode tratar o erro, se necessário
                         });
-                } else {
-                    console.log("Conta de destino não encontrada.");
-                    showMessage('error', 'Conta de destino não encontrada.');
-                    transferenciaEmAndamento = false; // Marca a transferência como concluída
+
+                    // Atualiza o saldo no Firebase e no LocalStorage
+                    var novoSaldoRemetente = correntista.saldo - amount;
+                    const updatesSaldo = {};
+                    updatesSaldo['/correntistas/' + correntista.accountNumber + '/saldo'] = novoSaldoRemetente;
+
+                    database.ref().update(updatesSaldo)
+                        .then(function () {
+                            console.log("Saldo do remetente atualizado no Firebase:", novoSaldoRemetente);
+                            // Aqui você pode adicionar o código para atualizar o saldo no LocalStorage, se necessário
+                        })
+                        .catch(function (error) {
+                            console.log("Erro ao atualizar o saldo do remetente no Firebase:", error.message);
+                            // Aqui você pode tratar o erro, se necessário
+                        });
+
+                    // Adiciona o valor da transferência do cheque especial ao saldo precedido de sinal negativo
+                    correntista.saldo -= amount;
+                    localStorage.setItem('saldo', correntista.saldo);
+                    console.log("Saldo atualizado após utilizar cheque especial:", correntista.saldo);
+
+                    alert("Transferência de R$ " + amount.toFixed(2) + " realizada com sucesso!");
                 }
-            });
+            } else {
+                console.log("Saldo insuficiente para realizar a transferência.");
+                alert("Valor da transferência excede o limite do saldo e do cheque especial.");
+            }
+
+            // Atualiza os dados do correntista no localStorage
+            localStorage.setItem('accountNumber', correntista.accountNumber);
+            localStorage.setItem('username', correntista.username);
+            localStorage.setItem('chequeEspecial', correntista.chequeEspecial);
+
+            console.log("Correntista atualizado:", correntista);
+
+            console.log("Finalizando a função Transferência.");
+
+            // Definir transferenciaEmAndamento de volta para false após a conclusão da transferência
+            transferenciaEmAndamento = false;
         }
 
-
-
-        function showMessage(type, message) {
-            console.log("Mensagem:", message);
-
-            var messageDiv = document.getElementById('message');
-            messageDiv.textContent = message;
-            messageDiv.className = type === 'success' ? 'success-message' : 'error-message';
-            messageDiv.classList.remove('hidden');
-        }
     </script>
 </body>
 
